# IPCSharedDataPool

./: .gitignore  CMakeLists.txt  Makefile  README.md  TEST_REPORT.md  T技术博客.md  USER_MANUAL.md  configure  run_all_tests.sh  run_apps.sh  run_tests_with_root.sh
.github/workflows/: ci.yml
apps/business_process/: main.cpp
apps/comm_process/: main.cpp
apps/ui_process/: main.cpp
docs/: IEC61850模块扩展计划.md  PROJECT_PLAN.md  Technical_Blog.md  任务进度报告.md
examples/: run_test.sh
examples/business_process/: Makefile  business_process  business_process.pro  main.cpp  main.moc
examples/comm_process/: Makefile  comm_process  comm_process.pro  main.cpp  main.moc
examples/ui_process/: Makefile  main.cpp  main.moc  ui_process  ui_process.pro
include/: Common.h  DataPoolClient.h  GooseAdapter.h  GooseReceiverAdapter.h  IEC61850Mapper.h  IEC61850Server.h  IPCEventCenter.h  LogService.h  PersistentStorage.h  Plugin.h  ProcessMonitor.h  ProcessRWLock.h  RTDataPool.h  ReportAdapter.h  SOERecorder.h  SVAdapter.h  SharedDataPool.h  ShmRingBuffer.h  VotingEngine.h  datapointmanager.h
include/easylogging/: easylogging++.h  easylogginghelper.h
src/: DataPoolClient.cpp  GooseAdapter.cpp  GooseReceiverAdapter.cpp  IEC61850Mapper.cpp  IEC61850Server.cpp  IPCEventCenter.cpp  LogService.cpp  PersistentStorage.cpp  ReportAdapter.cpp  SOERecorder.cpp  SVAdapter.cpp  SharedDataPool.cpp  VotingEngine.cpp
tests/: tst_adapters_basic.cpp  tst_benchmark.cpp  tst_common.cpp  tst_event_center  tst_event_center.cpp  tst_goose_adapter.cpp  tst_iec61850.cpp  tst_integration  tst_integration.cpp  tst_log_service.cpp  tst_new_features.cpp  tst_process_monitor.cpp  tst_ringbuffer  tst_ringbuffer.cpp  tst_rwlock.cpp  tst_shm_pool  tst_shm_pool.cpp  tst_soe_persist.cpp  tst_voting_iec61850.cpp
